--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body{
     /* align-items: center;
     justify-content: center; */
     margin: 1rem;
-    margin-left: 30rem;
-    margin-top: 10rem;
+    /* margin-left: 30rem;
+    margin-top: 10rem; */
 }
 
 .display-box {
