--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 body{
-   background-color: blue;
+   background-color: rgb(23, 23, 230);
    
 }
 .calculator {
