--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ input:active[type=button] {
 }
 @media only screen and (max-width: 600px) {
     body {
-      background-color: lightblue;
+      background-color: blue;
     }
   }
   .calculator {
